--- a/tr/index.html
+++ b/tr/index.html
@@ -314,7 +314,7 @@ Mehmet Yağız Yelgen
                 <div class="row">
                     <div class="col-auto h-100">
                         
-                        <a href="https://drive.google.com/file/d/1BzDuw-V6XXPBrPPg4ElvyU8Eg3Vjs0ko/view" class="btn" ZgotmplZ
+                        <a href="/cv/" class="btn" ZgotmplZ
 			  
                           target="_blank"
                           >
@@ -360,7 +360,7 @@ Mehmet Yağız Yelgen
             <div class="col-sm-12 col-md-12 col-lg-4">
                 <div class="row justify-content-center">
                     <div class="col-sm-12 col-md-9 pt-5 image animate px-5 px-md-5 px-lg-0 text-center">
-                        <img src="/images/hero.svg"
+                        <img src="/images/hero.png"
                             class="img-thumbnail mx-auto"
                             alt=""
                         >
